fix wrong height of sub entry thumbnail

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -577,7 +577,7 @@ body {
 
 .thumbnail {
     width: 64px;
-    height: 32px;
+    height: 36px;
     border-radius: 2px;
     margin-right: 0.5rem;
 }
